--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uploadthing/react": "^6.2.0",
     "airtable": "^0.12.2",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
     "jose": "^5.1.3",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.0",
-    "next-auth": "^4.24.5",
+    "next-auth": "5.0.0-beta.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uploadthing": "^6.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
