--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/select": "^2.1.20",
+    "@nextui-org/system": "^2.0.15",
+    "@nextui-org/theme": "^2.1.17",
     "@uploadthing/react": "^6.2.0",
     "airtable": "^0.12.2",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
+    "framer-motion": "^11.0.3",
     "jose": "^5.1.3",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.0",
