--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-  "name": "share_prompts",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@nextui-org/react": "^2.2.9",
-    "@nextui-org/select": "^2.1.20",
-    "@nextui-org/system": "^2.0.15",
-    "@nextui-org/theme": "^2.1.17",
-    "@uploadthing/react": "^6.2.0",
-    "airtable": "^0.12.2",
-    "bcrypt": "^5.1.1",
-    "cookie": "^0.6.0",
-    "framer-motion": "^11.0.3",
-    "jose": "^5.1.3",
-    "jsonwebtoken": "^9.0.2",
-    "next": "14.0.0",
-    "next-auth": "5.0.0-beta.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "uploadthing": "^6.2.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
-  }
+   "name": "share_prompts",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@heroui/react": "^3.0.0-beta.5",
+      "@heroui/select": "2.4.31",
+      "@heroui/styles": "^3.0.0-beta.5",
+      "@heroui/system": "2.4.26",
+      "@heroui/theme": "2.4.26",
+      "@uploadthing/react": "^7.3.3",
+      "airtable": "^0.12.2",
+      "bcrypt": "^6.0.0",
+      "cookie": "^1.1.1",
+      "framer-motion": "^12.24.7",
+      "jose": "^6.1.3",
+      "jsonwebtoken": "^9.0.3",
+      "next": "^16.1.1",
+      "next-auth": "^5.0.0-beta.30",
+      "react": "^19.2.3",
+      "react-dom": "^19.2.3",
+      "uploadthing": "^7.7.4"
+   },
+   "devDependencies": {
+      "@tailwindcss/postcss": "^4.1.18",
+      "autoprefixer": "^10.4.23",
+      "eslint": "^9.39.2",
+      "eslint-config-next": "16.1.1",
+      "postcss": "^8.5.6",
+      "tailwindcss": "^4.1.18"
+   }
 }
