--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-   "name": "share_prompts",
-   "version": "0.1.0",
-   "private": true,
-   "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
-   },
-   "dependencies": {
-      "@heroui/react": "^3.0.0-beta.5",
-      "@heroui/select": "2.4.31",
-      "@heroui/styles": "^3.0.0-beta.5",
-      "@heroui/system": "2.4.26",
-      "@heroui/theme": "2.4.26",
-      "@uploadthing/react": "^7.3.3",
-      "airtable": "^0.12.2",
-      "bcrypt": "^6.0.0",
-      "cookie": "^1.1.1",
-      "framer-motion": "^12.24.7",
-      "jose": "^6.1.3",
-      "jsonwebtoken": "^9.0.3",
-      "next": "^16.1.1",
-      "next-auth": "^5.0.0-beta.30",
-      "react": "^19.2.3",
-      "react-dom": "^19.2.3",
-      "uploadthing": "^7.7.4"
-   },
-   "devDependencies": {
-      "@tailwindcss/postcss": "^4.1.18",
-      "autoprefixer": "^10.4.23",
-      "eslint": "^9.39.2",
-      "eslint-config-next": "16.1.1",
-      "postcss": "^8.5.6",
-      "tailwindcss": "^4.1.18"
-   }
+  "name": "share_prompts",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "dev-inspect": "next dev --inspect"
+  },
+  "dependencies": {
+    "@heroui/react": "^3.0.0-beta.5",
+    "@heroui/select": "2.4.31",
+    "@heroui/styles": "^3.0.0-beta.5",
+    "@heroui/system": "2.4.26",
+    "@heroui/theme": "2.4.26",
+    "@uploadthing/react": "^7.3.3",
+    "airtable": "^0.12.2",
+    "bcrypt": "^6.0.0",
+    "cookie": "^1.1.1",
+    "framer-motion": "^12.24.7",
+    "jose": "^6.1.3",
+    "jsonwebtoken": "^9.0.3",
+    "next": "^16.1.1",
+    "next-auth": "^5.0.0-beta.30",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "uploadthing": "^7.7.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
+  }
 }
